--- a/css/master.css
+++ b/css/master.css
@@ -1,4 +1,8 @@
-.col-lg-4, .col-md-6, .col-sm-4{
+/* Class-level CSS Modification */
+
+.col-lg-4,
+.col-md-6,
+.col-sm-4{
   padding-left: 0;
   padding-right: 0;
 }
@@ -13,6 +17,7 @@
   height: 600px;
   max-height: 550px;
 }
+
 .card-text {
   text-align: justify;
 }
@@ -34,17 +39,20 @@ a.nav-link:hover {
   text-decoration: underline;
 }
 
-.navbar.scrolled {
+.scrolled {
     transition: background-color 300ms linear;
 }
 
-.navbar-collapse, .card-title, .title-header {
+.navbar-collapse,
+.card-title,
+.title-header {
   text-align: center;
 }
 
 /*
   ID-level CSS Modification;
 */
+
 #cover{
   min-width: 100%;
   min-height: 500px;
@@ -53,9 +61,9 @@ a.nav-link:hover {
   background-size: cover;
 }
 
-/*body{
-  margin: 0 20px;
-}*/
+/*
+  Tag-level CSS Modification;
+*/
 
 body{
   max-width: 100%;
@@ -66,9 +74,6 @@ a {
   color: #3d3d3d;
 }
 
-/*
-  Tag-level CSS Modification;
-*/
 a:hover{
   color: #000;
   text-decoration: none;
@@ -82,11 +87,17 @@ h3 {
   font-size: 140%;
 }
 
-h1, h2, h3, a {
+h1,
+h2,
+h3,
+a {
   text-transform: capitalize;
 }
 
-h1, h2, h3, p {
+h1,
+h2,
+h3,
+p {
   color: #3d3d3d;
 }
 
